--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- mostly we are going to use canvas -->
 <canvas id="myCanvas"></canvas>
+<script src="sensor.js"></script>
 <script src="utils.js"></script>
 <script src="road.js"></script>
 <script src="controls.js"></script>   
